<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/auth_background">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/logo_text"
            >
        </ImageView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/app_button_background_white"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textSize="16sp"

            >
        </androidx.appcompat.widget.AppCompatButton>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/or"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toLeftOf="@id/tvText"
                android:background="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@id/tvText"
                android:background="@color/white" />

        </RelativeLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="20dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/colorSecondaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    >

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/et_padding"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/et_textSize"
                        tools:text="abc@gmail.com" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/colorSecondaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="20dp"
                    >

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:padding="@dimen/et_padding"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/et_textSize"
                        tools:text="123456" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/btn_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_marginStart="260dp"
            android:textColor="@color/white"

            >

        </TextView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/app_button_background"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:textSize="16sp"
            >
        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>