<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/splash_background">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="20dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:layout_marginTop="20sp">

        </TextView>

        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="20dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/username"
                    android:textColorHint="@color/colorSecondaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    >

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/et_padding"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/et_textSize"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/colorSecondaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    >

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/et_padding"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/et_textSize"
                         />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password_again"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/colorSecondaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    >

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:padding="@dimen/et_padding"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/et_textSize"
                         />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/password_again"
                    android:textColorHint="@color/colorSecondaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    >

                    <EditText
                        android:id="@+id/et_password_again"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:padding="@dimen/et_padding"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/et_textSize"
                         />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_citizen_id"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/citizen_id"
                    android:textColorHint="@color/colorSecondaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    >

                    <EditText
                        android:id="@+id/et_citizen_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:padding="@dimen/et_padding"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/et_textSize"
                        android:maxLength="11"
                         />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/ll_terms_and_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    >

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/cb_terms_and_condition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:checked="false"
                        android:gravity="center"
                        android:layout_marginStart="16dp"/>

                    <TextView
                        android:id="@+id/tv_terms_condition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/txt_terms_condition_marginStart"
                        android:text="@string/agree_terms_conditions"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/txt_terms_and_condition_textSize"
                        android:layout_marginEnd="16dp"/>
                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/app_button_background"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="16sp"></androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:id="@+id/tv_already_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/app_yellow"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="15dp">
        </TextView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>