<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splash_background">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:src="@drawable/logo_text"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
    </ImageView>

    <FrameLayout
        android:id="@+id/fl_complaint_img_holder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_product_header_image_height"
        android:padding="10dp"
        >

        <ImageView
            android:id="@+id/iv_complaint_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorImageViewBackground"
            android:contentDescription="image"
            android:src="@drawable/ic_baseline_add_a_photo_24"
            />


    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_complaint_enter"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/what_is_your_complaint"
        android:textColorHint="@color/colorSecondaryText"
        android:background="@color/colorImageViewBackground"
        >

        <EditText
            android:background="@color/colorImageViewBackground"
            android:id="@+id/et_complaint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_location"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_your_complaint_location"
        android:textColorHint="@color/colorSecondaryText"
        android:background="@color/colorImageViewBackground"
        >

        <EditText
            android:background="@color/colorImageViewBackground"
            android:id="@+id/et_complaint_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_make_complaint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_button_background"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/make_complaint"
        android:textColor="@color/white"
        android:textSize="17sp">
    </androidx.appcompat.widget.AppCompatButton>









</LinearLayout>